# TRGoChessC

./: ACAutomaton.c  ACAutomaton.h  AIPlayer.c  AIPlayer.h  AIUtilities.c  AIUtilities.h  Action.c  Action.h  CMakeLists.txt  ChessBoard.c  ChessBoard.h  ChessPot.c  ChessPot.h  GA.c  GA.h  GameManager.c  GameManager.h  HumanPlayer.c  HumanPlayer.h  LinkedList.c  LinkedList.h  PQueue.c  PQueue.h  Player.c  Player.h  Queue.c  Queue.h  README.md  Stack.c  Stack.h  Train.c  Train.h  chessboard.c  chessboard.h  chessmanual.c  chessmanual.h  globals.c  globals.h  main.c  main.h  (+6 more)
